...
                  Icons.work_outline_rounded,
                  color: Theme.of(context).primaryColor,
                  size: 22,
                ),
                const SizedBox(width: 8),
                Text(
                  isOwner ? 'İlan Yönetimi' : 'İş Başvurusu & İletişim',
                  style: const TextStyle(
                    fontSize: 16,
                    fontWeight: FontWeight.bold,
                  ),
                ),
              ],
...
